--- a/A2G Dag 1/Dag1.html
+++ b/A2G Dag 1/Dag1.html
@@ -1,26 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/A2G Dag 1/Dag1.CSS" />
+    <script type="module" src="/A2G Dag 1/Dag1.JS"></script>
     <title>Document</title>
   </head>
   <body>
+    <nav>
+      <a href="/index.html">About me!</a>
+      <a href="/A2G Dag 1/Dag1.html"> DAG 1</a>
+      <a href="/A2G Dag 2/Dag2.html">DAG 2 </a>
+      <a href="">DAG 3</a>
+      <a href="">DAG 4</a>
+      <a href="">DEG 5</a>
+      <a href="">DEG 6</a>
+      <a href="">DEG 7</a>
+      <a href="">DAG 8</a>
+    </nav>
     <main>
-      Nettsider vi skal bruke gjennom kurset: Google Classroom: som blir brukt
-      for material og oppgaver igjennom kurset Github: som er en dokumentasjons
-      platform som vi kan laste opp kode prosjekter for versjonskontroll og
-      lagring Stackblitz: som er nettbasert programvare for å opprette
-      prosjekter og skrive kode i Vercel: en hosting side for å publisere
-      prosjekter Discord: som blir brukt til kommunikasjon for for kurset Figma:
-      som er et design program Andre nettsider som kan bli relevant i kurset:
-      Unsplash: en nettside for gratis bilder Coolors: en nettside for
-      fargepaletter Flaticon: en nettside for ikoner Temaer vi skal innom i
-      løpet av de neste 12 ukene: Semantisk HTML Plasserings metoder i CSS
-      Animasjoner i CSS Design planlegging Nettside analyser Responsive
-      nettsider JavaScript for CTA funksjonaliteter Data lagring og data henting
-      med JavaScript
+      <h1>Dag 1</h1>
+      <p>
+        <h3>Nettsider vi skal bruke gjennom kurset:</h3>
+        <p>
+          <ul>
+          <li>Google Classroom: som blir brukt for material og oppgaver igjennom kurset</li>
+          <li>Github: som er en dokumentasjons platform som vi kan laste opp kode prosjekter for versjonskontroll og lagring</li>
+          <li>Stackblitz: som er nettbasert programvare for å opprette prosjekter og skrive kode i</li>
+          <li>Vercel: en hosting side for å publisere prosjekter</li>
+          <li>Discord: som blir brukt til kommunikasjon for for kurset</li>
+          <li>Figma: som er et design program</li>
+        </ul>
+      </p>
+      </p>
+      <p>
+        <h3>Andre nettsider som kan bli relevant i kurset:</h3>
+        <p>
+          <ul>
+            <li> Unsplash: en nettside for gratis bilder</li>
+            <li>Coolors: en nettside for fargepaletter</li>
+            <li>Flaticon: en nettside for ikoner</li>
+          </ul>
+        </p>
+        <p>
+          <h3>Temaer vi skal innom i løpet av de neste 12 ukene:</h3>
+          <p>
+            <ul>
+            <li>Semantisk HTML</li>
+            <li>Plasserings metoder i CSS</li>
+            <li>Animasjoner i CSS</li>
+            <li>Design planlegging</li>
+            <li>Nettside analyser</li>
+            <li>Responsive nettsider</li>
+            <li>JavaScript for CTA funksjonaliteter</li>
+            <li>Data lagring og data henting med JavaScript</li>
+          </ul>
+          </p>
+        </p>
+      </p>
+
     </main>
     <footer></footer>
   </body>
