--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <nav>
-      <a href="/index.html"> DAG 1</a>
-      <a href="">DAG 2 </a>
+      <a href="/index.html">About me!</a>
+      <a href="/A2G Dag 1/Dag1.html"> DAG 1</a>
+      <a href="/A2G Dag 2/Dag2.html">DAG 2 </a>
       <a href="">DAG 3</a>
       <a href="">DAG 4</a>
       <a href="">DEG 5</a>
