--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
       <div></div>
     </main>
     <footer>
-      <div></div>
+      <h3>laget av Charistian</h3>
+      <div>
+        <img src="/Icon/E-mail.png" alt="">
+        <img src="/Icon/FB.png" alt="">
+        <img src="/Icon/Home.png" alt="">
+        <img src="/Icon/IG.png" alt="">
+      </div>
     </footer>
   </body>
 </html>
