--- a/A2G Dag 1/dag1.html
+++ b/A2G Dag 1/dag1.html
@@ -13,7 +13,7 @@
       <a href="/index.html">About me!</a>
       <a href="/A2G Dag 1/Dag1.html"> DAG 1</a>
       <a href="/A2G Dag 2/Dag2.html">DAG 2 </a>
-      <a href="">DAG 3</a>
+      <a href="/A2G Dag 3/Dag3.html">DAG 3</a>
       <a href="">DAG 4</a>
       <a href="">DEG 5</a>
       <a href="">DEG 6</a>
