--- a/A2G Dag 3/dag3.html
+++ b/A2G Dag 3/dag3.html
@@ -4,7 +4,7 @@
     <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/A2G Dag 3/dag 3.scc" />
+    <link rel="stylesheet" href="/A2G Dag 3/dag 3.Css"/>
     <script type="module" src="/A2G Dag 3/dag 3.js"></script>
     <title>Document</title>
   </head>
@@ -13,7 +13,7 @@
       <a href="/index.html">About me!</a>
       <a href="/A2G Dag 1/Dag1.html"> DAG 1</a>
       <a href="/A2G Dag 2/Dag2.html">DAG 2 </a>
-      <a href="/A2G Dag 3/dag 3.html">DAG 3</a>
+      <a href="/A2G Dag 3/Dag3.html">DAG 3</a>
       <a href="">DAG 4</a>
       <a href="">DEG 5</a>
       <a href="">DEG 6</a>
