--- a/A2G Dag 1/dag1.html
+++ b/A2G Dag 1/dag1.html
@@ -14,8 +14,8 @@
       <a href="/A2G Dag 1/Dag1.html"> DAG 1</a>
       <a href="/A2G Dag 2/Dag2.html">DAG 2 </a>
       <a href="/A2G Dag 3/Dag3.html">DAG 3</a>
-      <a href="">DAG 4</a>
-      <a href="">DEG 5</a>
+      <a href="/A2G Dag 4/dag4.html">DAG 4</a>
+      <a href="/A2G Dag 5/dag5.html">DEG 5</a>
       <a href="">DEG 6</a>
       <a href="">DEG 7</a>
       <a href="">DAG 8</a>
