--- a/A2G Dag 1/dag1.html
+++ b/A2G Dag 1/dag1.html
@@ -4,14 +4,14 @@
     <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/A2G Dag 1/Dag1.CSS" />
-    <script type="module" src="/A2G Dag 1/Dag1.JS"></script>
+    <link rel="stylesheet" href="/A2G Dag 1/dag1.css">
+    <script type="module" src="/A2G Dag 1/dag1.js"></script>
     <title>Document</title>
   </head>
   <body>
     <nav>
       <a href="/index.html">About me!</a>
-      <a href="/A2G Dag 1/Dag1.html"> DAG 1</a>
+      <a href="/A2G Dag 1/Dag1.html">DAG 1</a>
       <a href="/A2G Dag 2/Dag2.html">DAG 2 </a>
       <a href="/A2G Dag 3/Dag3.html">DAG 3</a>
       <a href="/A2G Dag 4/dag4.html">DAG 4</a>
