--- a/A2G Dag 3/dag3.html
+++ b/A2G Dag 3/dag3.html
@@ -4,8 +4,8 @@
     <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/A2G Dag 3/dag 3.Css"/>
-    <script type="module" src="/A2G Dag 3/dag 3.js"></script>
+    <link rel="stylesheet" href="/A2G Dag 3/dag3.css"/>
+    <script type="module" src="/A2G Dag 3/dag3.js"></script>
     <title>Document</title>
   </head>
   <body>
