--- a/A2G Dag 2/dag2.html
+++ b/A2G Dag 2/dag2.html
@@ -4,8 +4,8 @@
     <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/A2G Dag 2/Dag2.CSS" />
-    <script type="module" src="/A2G Dag 2/Dag2.JS"></script>
+    <link rel="stylesheet" href="/A2G Dag 2/dag2.css" />
+    <script type="module" src="/A2G Dag 2/dag2.js"></script>
     <title>Dag 3</title>
   </head>
   <body>
