--- a/a2g-dag2/dag2.html
+++ b/a2g-dag2/dag2.html
@@ -4,19 +4,19 @@
     <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/A2G Dag 2/dag2.css" />
-    <script type="module" src="/A2G Dag 2/dag2.js"></script>
+    <link rel="stylesheet" href="/A2GDag2/dag2.css" />
+    <script type="module" src="/a2g-dag2/dag2.css"></script>
     <title>Dag 3</title>
   </head>
   <body>
     <nav>
         <a href="/index.html">About me!</a>
-        <a href="/A2GDag1/dag1.html">DAG 1</a>
-        <a href="/A2GDag2/Dag2.html">DAG 2 </a>
-        <a href="/A2GDag3/Dag3.html">DAG 3</a>
-        <a href="/A2GDag4/dag4.html">DAG 4</a>
-        <a href="/A2GDag5/dag5.html">DEG 5</a>
-        <a href="">DEG 6</a>
+        <a href="/a2g-dag1/dag1.html">DAG 1</a>
+        <a href="/a2g-dag2/dag2.html">DAG 2 </a>
+        <a href="/a2g-dag3/dag3.html">DAG 3</a>
+        <a href="/a2g-dag4/dag4.html">DAG 4</a>
+        <a href="/a2g-dag5/dag5.html">DEG 5</a>
+        <a href="/a2g-dag6/dag6.html">DEG 6</a>
         <a href="">DEG 7</a>
         <a href="">DAG 8</a>
       </nav>
