--- a/a2g-dag6/dag6.html
+++ b/a2g-dag6/dag6.html
@@ -4,8 +4,8 @@
     <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/A2GDag6/dag6.css"/>
-    <script type="module" src="/a2g-dag6/dag6.css"></script>
+    <link rel="stylesheet" href="/a2g-dag6/dag6.css"/>
+    <script type="module" src="/a2g-dag6/dag6.js"></script>
     <title>Document</title>
   </head>
   <body>
