--- a/a2g-dag2/dag2.html
+++ b/a2g-dag2/dag2.html
@@ -17,7 +17,7 @@
         <a href="/a2g-dag4/dag4.html">DAG 4</a>
         <a href="/a2g-dag5/dag5.html">DEG 5</a>
         <a href="/a2g-dag6/dag6.html">DEG 6</a>
-        <a href="">DEG 7</a>
+        <a href="/a2g-dag7/dag7.html">DEG 7</a>
         <a href="">DAG 8</a>
       </nav>
     <main>
