--- a/a2g-dag5/dag5.html
+++ b/a2g-dag5/dag5.html
@@ -17,11 +17,39 @@
       <a href="/a2g-dag4/dag4.html">DAG 4</a>
       <a href="/a2g-dag5/dag5.html">DEG 5</a>
       <a href="/a2g-dag6/dag6.html">DEG 6</a>
-      <a href="">DEG 7</a>
+      <a href="/a2g-dag7/dag7.html">DEG 7</a>DEG 7</a>
       <a href="">DAG 8</a>
     </nav>
     <main>
-      <div></div>
+      <h1>Introduksjon til design</h1>
+      <div>
+        <p>
+          Hei!
+          Vi har i dag vært gjennom hvordan vi kan designe nettsider, og sett på flere viktige faktorer som påvirker hvordan vi bør utforme designet avhengig av hvem som skal bruke nettsiden. Ulike målgrupper har forskjellige behov, preferanser og måter å navigere på, noe som stiller krav til både utseende og funksjonalitet. Det gjelder både hvordan vi strukturerer informasjonen, hvilke elementer vi bruker som blikkfang, og hvordan vi sørger for god brukervennlighet. Alt dette bidrar til å skape en mer tiltalende og funksjonell nettside for de ulike målgruppene.
+          I dag har vi særlig fokusert på teknikker for å lage effektive blikkfang, altså hvordan vi kan fremheve viktige elementer for å lede brukernes oppmerksomhet. Dette kan innebære alt fra å bruke riktig fargepalett og kontraster til plassering av elementer og bruk av bilder. Hensikten med blikkfangene er ikke bare å fange interesse, men også å skape en mer intuitiv og effektiv navigasjons flyt på nettsiden.
+          Hvordan vi strukturerer HTML-elementene våre spiller en viktig rolle i hvordan vi senere kan bruke CSS for å skape den visuelle strukturen vi ønsker. Spesielt når vi tar i bruk plasseringsmetoden flexbox, blir HTML - treet - altså hierarkiet mellom HTML-elementene - avgjørende for sluttresultatet på nettsiden. Flexbox lar oss plassere innhold i kolonner og rader på en fleksibel måte, noe som gir god kontroll over hvordan innholdet fordeles og tilpasses ulike skjermstørrelser. Det å kunne sette innhold i dybde, kolonner og rekker gir oss også muligheten til å formidle informasjon på en strukturert måte, noe som igjen påvirker brukeropplevelsen positivt.
+          Gjennom å mestre disse teknikkene kan vi skape et design som ikke bare ser bra ut, men som også fungerer optimalt for den tiltenkte målgruppen.
+        </p>
+        <p>
+          Oppgave:
+          <p>Bruk en nettside du har begynt på, eller sett opp en ny, for å utforske de design prinsippene vi har gått gjennom. Prøv ut ulike layout-strukturer ved å lage variert innhold som har forskjellig plassering og stil, alt etter hva du ønsker at oppsettet skal kommunisere. Dette vil gi deg erfaring med hvordan ulike designvalg påvirker brukeropplevelsen, og gi deg innsikt i hva som fungerer best for din nettsides målgruppe.
+        </p>
+        <p>
+          Krav:
+          <ul>
+            <li>Lag seksjoner som viser de ulike design oppsettene med ulikt innhold som er passende.</li>
+            <li>Lag et kort som for eksempel et kort som inneholder overskrift, tekst, bilde og lenker.</li>
+          </ul>
+        </p>
+        <p>
+          Bonus:
+          <ul>
+            <li>Eksperimenter med background- egenskapene i CSS for å lage bakgrunner til element</li>
+            <li>Eksperimenter med å lage placeholder informasjon i de ulike oppsettene dere lager her i Portfolio prosjektet som senere kan få korrekt utfylling når vi har kommet lengere</li>
+          </ul>
+        </p>
+      </p>
+      </div>
     </main>
     <footer>
       <div>laget av Christian</div>
