begyner på oppg

--- a/a2g-dag7/dag7.html
+++ b/a2g-dag7/dag7.html
@@ -21,3 +21,42 @@
       <a href="">DAG 8</a>
     </nav>
     <main>
+        <h1>Responsive nettside</h1>
+        <div>
+            <p>Hei!
+                I dag gjennomgikk vi hvordan vi kan lage responsive nettsider som tilpasser seg ulike enheter, enten det er en desktop, et nettbrett eller en mobiltelefon. Målet er at nettsidene våre alltid skal fungere godt og se visuelt tiltalende ut, uansett hvilken enhet brukeren benytter. Vi fokuserte spesielt på Media Queries, en viktig metode i CSS som gjør designet responsivt. 
+                Media Queries gir oss muligheten til å definere hvilke CSS Rules som skal være aktive basert på skjermstørrelse eller orientering. Dette er essensielt i responsivt webdesign fordi det lar oss tilpasse layouten av nettsiden til forskjellige enheter. For eksempel kan vi ha et horisontalt design for desktop-brukere og et vertikalt design for mobilbrukere, uten at det kreves separate nettsider for hver enhet.
+                En annen stor del av det å lage responsive nettsider er valget av målenheter når vi setter størrelser på elementer. Her er det viktig å skille mellom faste og responsive enheter. Faste enheter, som pixler(px), gir oss presis kontroll over elementenes størrelse, men er mindre fleksible når vi arbeider med ulike skjermstørrelser. Responsive enheter, som prosent(%), em og rem, tilpasser seg derimot forholdsmessig i forhold til størrelsen på elementer rundt og rot-elementet. Dette gjør dem mye mer fleksible og nyttige i responsiv design, da de kan skaleres etter behov og sikre bedre tilpasning på ulike enheter. Vi kan også bruke enheter som viewport width(vw) og viewport height(vh) for å sikre at elementer fyller skjermen riktig uten å forstyrre designet.
+                Når vi lager responsivt design, er det flere teknikker og verktøy som kan hjelpe til å sikre at layout og innhold fungerer optimalt. For eksempel kan vi bruke Flexbox eller Grid (skal innom senere i kurset) i CSS, som gir oss fleksibilitet når vi tilpasser plasseringen av elementer. Disse layout-metodene gjør det enklere å justere hvordan innholdet presenteres, avhengig av skjermstørrelse, uten at det kreves mye ekstra CSS-kode. Vi bør også huske på å tilpasse bilder og andre medier, slik at de skaleres på en hensiktsmessig måte.
+                Til slutt er det viktig å teste designet på ulike enheter. Responsivt design handler ikke bare om hvordan nettsiden ser ut på en mobil eller en desktop, men også om å sikre en god brukeropplevelse på tvers av alle enheter og nettlesere. Nettleser verktøy som DevTools(inspiser) lar oss simulere forskjellige enheter og teste designet uten å måtte bruke fysisk utstyr.
+                Oppgave beskrivelse:
+                Din oppgave er å lage en nettside som tilpasser seg ulike skjermstørrelser ved hjelp av media queries. Dette innebærer å sørge for at layout, tekst og bilder justeres og ser bra ut både på små skjermer, som mobiltelefoner, og større skjermer, som nettbrett og datamaskiner. Når du går i gang med oppgaven, er det viktig å tenke på hvordan du best kan strukturere koden for å gjøre den så oversiktlig og forståelig som mulig, både for deg som skriver den, og for oss som skal evaluere den. Det kan være en fordel å starte med en plan for hvordan nettsiden skal bygges opp, slik at du har en klar idé om innholdet og strukturen før du begynner å kode. 
+            </p>
+            <p>
+                krav
+                <ul>
+                    <li>Bruk semantisk HTML og ekstern CSS.</li>
+                    <li>Sett opp en header og footer med passende lenker og/eller informasjon.</li>
+                    <li>Opprett seksjoner (sections) i hovedinnholdet (main) som inneholder ulik informasjon tilpasset formålet med nettsiden.</li>
+                    <li>Vurder hvor det er naturlig å bruke faste eller responsive målenheter for optimal design.</li>
+                    <li>Sett opp et brytepunkt med media query som endrer designet på nettsiden, slik at det tilpasser seg store skjermer (som laptop) og små skjermer (som mobiltelefon).</li>
+                    <li>Bruk Flexbox til å justere plasseringen av elementer ved de ulike brytepunktene.</li>
+                </ul>
+            </p>
+            <p>
+                bonus
+                <ul>
+                    <li>Sett opp flere brytepunkter med media queries for å tilpasse designet til ulike skjermstørrelser: større skjermer (monitor/TV), store skjermer (laptop), mellomstore skjermer (nettbrett), og små skjermer (mobil).</li>
+                    <li>Bruk CSS Grid til å endre plasseringen av elementene ved de ulike brytepunktene.</li>
+                    <li>Legg til innhold som kun skal vises på enten desktop eller mobil, avhengig av skjermstørrelse.</li>
+                </ul>
+            </p>
+        </div>
+    </main>
+    <h1></h1>
+    <footer>
+      <div>laget av Christian</div>
+      <div></div>
+    </footer>
+  </body>
+</html>
