--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       <a href="">DAG 8</a>
     </nav>
     <main>
-      <div></div>
+      <h1>Om meg</h1>
+      <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae alias nisi quae laboriosam quod vel sapiente explicabo nobis consequuntur.</p>
+      </div>
     </main>
     <footer>
       <h3>laget av Charistian</h3>
