--- a/a2g-dag2/dag2.html
+++ b/a2g-dag2/dag2.html
@@ -21,7 +21,7 @@
         <a href="">DAG 8</a>
       </nav>
     <main>
-        <h1>Dag 2</h1>
+        <h1> Introduksjon HTML</h1>
         <p>
             <h3>HTML (HyperText Markup Language):</h3>
             <p>HTML er det grunnleggende byggesteinen for alle nettsider. Det er et markeringsspråk som brukes til å strukturere innholdet. HTML benytter seg av såkalte "tags" for å definere elementer som overskrifter, avsnitt, bilder og lenker. Disse taggene gir instruksjoner til nettleseren om hvordan innholdet skal presenteres og organiseres.
