--- a/index.html
+++ b/index.html
@@ -27,12 +27,20 @@
       </div>
     </main>
     <footer>
-      <h3>laget av Charistian</h3>
+      <h3>Laget av Charistian</h3>
       <div>
-        <img src="/Icon/E-mail.png" alt="">
-        <img src="/Icon/FB.png" alt="">
-        <img src="/Icon/Home.png" alt="">
-        <img src="/Icon/IG.png" alt="">
+        <img src="/Icon/E-mail.png" alt=""
+        width="50"
+        height="50">
+        <img src="/Icon/FB.png" alt=""
+        width="50"
+        height="50">
+        <img src="/Icon/Home.png" alt=""
+        width="50"
+        height="50">
+        <img src="/Icon/IG.png" alt=""
+        width="50"
+        height="50">
       </div>
     </footer>
   </body>
