--- a/a2g-dag1/dag1.html
+++ b/a2g-dag1/dag1.html
@@ -21,7 +21,7 @@
       <a href="">DAG 8</a>
     </nav>
     <main>
-      <h1>Dag 1</h1>
+      <h1> Introduksjon kurset</h1>
       <p>
         <h3>Nettsider vi skal bruke gjennom kurset:</h3>
         <p>
