--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="/a2g-dag7/dag7.html">DEG 7</a>
       <a href="">DAG 8</a>
     </nav>
+    <header></header>
     <main>
       <h1>Om meg</h1>
       <div>
