--- a/a2g-dag5/dag5.html
+++ b/a2g-dag5/dag5.html
@@ -50,6 +50,8 @@
         </p>
       </p>
       </div>
+      <div>Eksempler</div>
+      <a href="/a2g-dag5/oppgave-5.html">Cards</a>
     </main>
     <footer>
       <div>laget av Christian</div>
