--- a/a2g-dag5/oppgave-5.html
+++ b/a2g-dag5/oppgave-5.html
@@ -4,12 +4,28 @@
     <title>Kurs A2G HTML/CSS/JavaSkript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/a2g-dag5/dag5.css"/>
+    <link rel="stylesheet" href="/a2g-dag5/card.css"/>
     <script type="module" src="/a2g-dag5/dag5.js"></script>
     <title>Document</title>
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+        <section class="firstSection">
+            <h3>Plasering i Dybden</h3> 
+        </section>
+        
+        <section class="secondSection"></section>
+        <div class="card">
+            <div class="cardText">
+                <!-- Plasseringer i rekker -->
+                <h2>Star Citizen</h2>
+                <p>tar Citizen is a space SIM/MMO</p>                
+            </div>
+            <img class="cardImg" src="/Img/star_citizen_md.webp" alt="">
+        </div>
+
+
+    </main>
     <footer></footer>
   </body>
