--- a/a2g-dag5/oppgave-5.html
+++ b/a2g-dag5/oppgave-5.html
@@ -11,21 +11,55 @@
   <body>
     <header></header>
     <main>
-        <section class="firstSection">
-            <h3>Plasering i Dybden</h3> 
-        </section>
-        
-        <section class="secondSection"></section>
-        <div class="card">
-            <div class="cardText">
-                <!-- Plasseringer i rekker -->
+      <section class="cardEddit">
+        <div>
+          <h3>Plasering i Row</h3>        
+        <div class="card-r">
+            <div class="cardText-r">
+                <!-- Plasseringer i row -->
                 <h2>Star Citizen</h2>
-                <p>tar Citizen is a space SIM/MMO</p>                
+                <p>Star Citizen is a space SIM/MMO in active develepment.</p>                
             </div>
-            <img class="cardImg" src="/Img/star_citizen_md.webp" alt="">
+            <a href="https://robertsspaceindustries.com/"><img class="cardImg-c" src="/Img/star_citizen_md.webp" alt=""></a>
         </div>
-
-
-    </main>
-    <footer></footer>
-  </body>
+      </div>
+      <div>
+        <h3>Plasering i Column</h3>       
+        <div class="card-c">
+          <div class="cardText-c">
+            <!-- Plasseringer i column -->
+            <h2>Star Citizen</h2>
+            <p>Star Citizen is a space SIM/MMO in active develepment.</p>                
+         </div>
+         <a href="https://robertsspaceindustries.com/"><img class="cardImg-c" src="/Img/star_citizen_md.webp" alt=""></a>
+      
+        </div>
+  </section>
+  <br>
+  <section class="midt">
+    <div>
+      <h3>Plasering i Row</h3>        
+    <div class="card-r">
+        <div class="cardText-r">
+            <!-- Plasseringer i row -->
+            <h2>Star Citizen</h2>
+            <p>Star Citizen is a space SIM/MMO in active develepment.</p>                
+        </div>
+        <a href="https://robertsspaceindustries.com/"><img class="cardImg-c" src="/Img/star_citizen_md.webp" alt=""></a>
+    </div>
+  </div>
+  <div>
+    <h3>Plasering i Column</h3>       
+    <div class="card-c">
+      <div class="cardText-c">
+        <!-- Plasseringer i column -->
+        <h2>Star Citizen</h2>
+        <p>Star Citizen is a space SIM/MMO in active develepment.</p>                
+     </div>
+     <a href="https://robertsspaceindustries.com/"><img class="cardImg-c" src="/Img/star_citizen_md.webp" alt=""></a>
+    </div>
+  </section>
+</div>
+</main>
+<footer></footer>
+</body>
