--- a/a2g-dag6/dag6.html
+++ b/a2g-dag6/dag6.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="/index.html">About me!</a>
       <a href="/a2g-dag1/dag1.html">DAG 1</a>
-      <a href="/a2g-dag2/dag2.html">DAG 2 </a>
+      <a href="/a2g-dag2/dag2.html">DAG 2</a>
       <a href="/a2g-dag3/dag3.html">DAG 3</a>
       <a href="/a2g-dag4/dag4.html">DAG 4</a>
       <a href="/a2g-dag5/dag5.html">DEG 5</a>
@@ -21,34 +21,35 @@
       <a href="">DAG 8</a>
     </nav>
     <main>
-      <div></div>
-    </main>
-    <h1>Introduksjon til Figma</h1>
+      <h1>Introduksjon til Figma</h1>
+        <p>
+        Hei!
+        Det å være en webutvikler handler mye om å se helheten i en webside. Innhold, plasseringer, funksjonaliteter og farger er alle viktige elementer som påvirker brukeropplevelsen. Det er også viktig å ta hensyn til brukerens behov og navigasjonsmønstre, slik at nettsiden ikke bare ser bra ut, men også er intuitiv og enkel å bruke. Derfor er det avgjørende at vi har en god forståelse for webdesign når vi utvikler websider. 
+        Ved å sette opp wireframes i Figma kan vi spare mye tid på koding, fordi vi allerede har en gjennomført design plan. Dette lar oss også eksperimentere med ulike designalternativer og motta tilbakemeldinger før vi begynner å kode, noe som kan føre til et enda bedre sluttprodukt. Vi vet hvor vi skal plassere elementene og hvordan vi ønsker at nettsiden skal se ut visuelt. Dette gir oss et solid grunnlag når vi begynner koding, ettersom vi har et design å følge.
+        Målet med å lære seg å lage wireframes i Figma er å forstå hvordan nettsider kan struktureres, og å lage en oversikt over hvilke HTML-elementer og CSS-egenskaper du trenger for å oppnå dette målet. Med en skisse blir det mye enklere å finne ut hvilke HTML-elementer som er viktige og hvilken CSS du trenger for å oppnå det visuelle uttrykket. En god wireframe fungerer som en veikart som hjelper oss med å holde fokus på brukeropplevelsen og sørger for at alle funksjoner og elementer på nettsiden er godt gjennomtenkt.
+        Oppgave beskrivelse:
+        Lag en enkel wireframe for en nettside. Wireframen skal representere en oversikt over innholdet og vise hvor de ulike elementene plasseres på siden. Wireframen skal inneholde ulike seksjoner for header, main og footer. I headeren bør du vurdere elementer som logo, navigasjonsmeny og eventuell søkefunksjon. Hovedseksjonen (main) skal inneholde innholdsområder som er relevante for nettsiden, som for eksempel introduksjonsseksjon, bildeområde eller artikkel. Bruk det dere har lært i undervisningen om designprinsipper til å lage et oppsett som oppfyller kravene. 
+        </p>
+      <p>
+        krav:
+        <ul>
+          <li>Lage wireframe til en nettside i desktop (Velg frames -> desktop -> desktop)</li>
+          <li>Sett opp en header som har en navigasjon</li>
+          <li>Sett opp main som har ulike seksjoner med innhold</li>
+          <li>Sett opp en footer som har kreditasjon</li>
+        </ul>
+      </p>
     <p>
-      Hei!
-      Det å være en webutvikler handler mye om å se helheten i en webside. Innhold, plasseringer, funksjonaliteter og farger er alle viktige elementer som påvirker brukeropplevelsen. Det er også viktig å ta hensyn til brukerens behov og navigasjonsmønstre, slik at nettsiden ikke bare ser bra ut, men også er intuitiv og enkel å bruke. Derfor er det avgjørende at vi har en god forståelse for webdesign når vi utvikler websider. 
-      Ved å sette opp wireframes i Figma kan vi spare mye tid på koding, fordi vi allerede har en gjennomført design plan. Dette lar oss også eksperimentere med ulike designalternativer og motta tilbakemeldinger før vi begynner å kode, noe som kan føre til et enda bedre sluttprodukt. Vi vet hvor vi skal plassere elementene og hvordan vi ønsker at nettsiden skal se ut visuelt. Dette gir oss et solid grunnlag når vi begynner koding, ettersom vi har et design å følge.
-      Målet med å lære seg å lage wireframes i Figma er å forstå hvordan nettsider kan struktureres, og å lage en oversikt over hvilke HTML-elementer og CSS-egenskaper du trenger for å oppnå dette målet. Med en skisse blir det mye enklere å finne ut hvilke HTML-elementer som er viktige og hvilken CSS du trenger for å oppnå det visuelle uttrykket. En god wireframe fungerer som en veikart som hjelper oss med å holde fokus på brukeropplevelsen og sørger for at alle funksjoner og elementer på nettsiden er godt gjennomtenkt.
-      Oppgave beskrivelse:
-      Lag en enkel wireframe for en nettside. Wireframen skal representere en oversikt over innholdet og vise hvor de ulike elementene plasseres på siden. Wireframen skal inneholde ulike seksjoner for header, main og footer. I headeren bør du vurdere elementer som logo, navigasjonsmeny og eventuell søkefunksjon. Hovedseksjonen (main) skal inneholde innholdsområder som er relevante for nettsiden, som for eksempel introduksjonsseksjon, bildeområde eller artikkel. Bruk det dere har lært i undervisningen om designprinsipper til å lage et oppsett som oppfyller kravene. 
-    </p>
-    <p>
-      krav:
-      <ul>
-        <li>Lage wireframe til en nettside i desktop (Velg frames -> desktop -> desktop)</li>
-        <li>Sett opp en header som har en navigasjon</li>
-        <li>Sett opp main som har ulike seksjoner med innhold</li>
-        <li>Sett opp en footer som har kreditasjon</li>
-      </ul>
-    </p>
-    <p>
-      bonus:
+      <B></B>onus:
       <ul>
         <li>Lag wireframe til samme nettside som desktop men til mobil størrelse (Velg frames -> mobile -> iphone/android)</li>
         <li>Istedenfor å bruke bokser som illustrerer innhold, legg til tekst og bilder i designet istedenfor</li>
       </ul>
-
     </p>
+    <h3>Oppgave</h3>
+    <p><a href="https://www.figma.com/design/l78yUusQbCnuUmOFzzeAiD/Untitled?m=auto&t=AMBDcDXtvBGsKWVD-1">Figma Eksempel</a></p>
+    </main>
+      
     <footer>
       <div>laget av Christian</div>
       <div></div>
