--- a/a2g-dag7/dag7.html
+++ b/a2g-dag7/dag7.html
@@ -52,6 +52,10 @@
                 </ul>
             </p>
         </div>
+        <div>
+          <h3>Oppgave</h3>
+          <p><a href="/a2g-dag7/oppg7.html"></a>Oppgave 7</p>
+        </div>
     </main>
     <h1></h1>
     <footer>
