--- a/a2g-dag7/dag7.html
+++ b/a2g-dag7/dag7.html
@@ -54,7 +54,7 @@
         </div>
         <div>
           <h3>Oppgave</h3>
-          <p><a href="/a2g-dag7/oppg7.html"></a>Oppgave 7</p>
+          <p><a href="/a2g-dag7/oppg7.html">Oppgave 7</a></p>
         </div>
     </main>
     <h1></h1>
