--- a/a2g-dag7/oppg7.html
+++ b/a2g-dag7/oppg7.html
@@ -18,15 +18,21 @@
     <main>
       <h2>Star Citizen a Beginning</h2>
       <p></p>
-        <section class="card-W">
-            <div class="cardText-W">
-              
+        <section class="card-w">
+            <div class="cardText-w">
+              <p><b>C8X PISCES EXPEDITION </b></p>
+              <P>STARTER PACK <em>$75.00 USD</em></P>
+              <a href="https://robertsspaceindustries.com/pledge/Packages/C8X-Pisces-Expedition-Starter-Pack"><img class="cardImg" src="/Img/slideshow.jpg" alt=""></a>                    
             </div>
+            
         </section>
 
-        <section class="card-C">
-            <div class="cardText-C"> 
-
+        <section class="card-c">
+            <div class="cardText-c"> 
+              <p><b>Cutter</b></p>
+                <P>Starter Package <em>$75.00 USD</em></P>
+                <a href="https://robertsspaceindustries.com/pledge/Packages/Cutter-Starter-Package"><img class="cardImg" src="/Img/Star_Citizen_Drake_Cutter_default_Laser.jpg" alt=""></a>                    
+              </div>
             </div>
         </section>
         <div class="sep"></div>
