--- a/a2g-dag5/oppgave-5.html
+++ b/a2g-dag5/oppgave-5.html
@@ -37,7 +37,8 @@
   </section>
   <br>
   <section class="midt">
-    <div>
+    <div><h2>Plasering på Siden</h2>
+      <p>Kort og Tekst kan plaseres på fler forskjellige sterder på Siden.</p>
       <h3>Plasering i Row</h3>        
     <div class="card-r">
         <div class="cardText-r">
