--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav>
-      <a href="/index.html">About me!</a>
+      <a href="/index.html">Om Meg!</a>
       <a href="/a2g-dag1/dag1.html">DAG 1</a>
       <a href="/a2g-dag2/dag2.html">DAG 2</a>
       <a href="/a2g-dag3/dag3.html">DAG 3</a>
@@ -20,13 +20,24 @@
       <a href="/a2g-dag7/dag7.html">DEG 7</a>
       <a href="">DAG 8</a>
     </nav>
+
     <header></header>
+
     <main>
-      <h1>Om meg</h1>
-      <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae alias nisi quae laboriosam quod vel sapiente explicabo nobis consequuntur.</p>
-      </div>
+      <div class="int">
+        <div ><h1>Om meg</h1></div>
+        <img src="/Img/profil place holder.avif" width="200" height="200" alt="peofil bilde">
+        </div>
+          <div class="about">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae alias nisi quae laboriosam quod vel sapiente explicabo nobis consequuntur.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sit sunt voluptatem soluta laboriosam unde provident quam rem atque reprehenderit!</p>
+        </div>
+      </div>      
+
+      
+
     </main>
+
     <footer>
       <h3>Laget av Charistian</h3>
       <div>
@@ -44,5 +55,6 @@
         height="50">
       </div>
     </footer>
+
   </body>
 </html>
