--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <main>
       <div class="int">
         <div ><h1>Om meg</h1></div>
-        <img src="/Img/profil place holder.avif" width="200" height="200" alt="peofil bilde">
+          <div class="profil">
+            <img src="/Img/profil place holder.avif" width="200" height="200" alt="peofil bilde" >
+          </div>
         </div>
           <div class="about">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus beatae alias nisi quae laboriosam quod vel sapiente explicabo nobis consequuntur.</p>
