--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <main>
       <div class="int">
         <div ><h1>Om meg</h1></div>
-          <div class="profil">
-            <img src="/Img/profil place holder.avif" width="200" height="200" alt="peofil bilde" >
+          <div>
+            <img class="profil" src="/Img/profil place holder.avif" width="200" height="200" alt="peofil bilde" >
           </div>
         </div>
           <div class="about">
